fix alignment on Available Creations page

--- a/static/css/styles-available_creations.css
+++ b/static/css/styles-available_creations.css
@@ -1,5 +1,5 @@
 /* Responsive layout - when the screen is less than 1000px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 700px) {
   .row, .navbar {   
     flex-direction: column;
   }
@@ -15,7 +15,7 @@ body {
   background-color: rgb(87, 147, 226);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  padding: 20px;
+  padding: 10px;
 }
 
 h1 {
@@ -31,7 +31,7 @@ h2 {
   font-size: 5rem;
   color:rgb(110, 3, 3);
   text-align: center;
-  margin: 15px 35px 35px 35px;
+  margin: 20px;
 }
 
 h3 {
@@ -52,9 +52,7 @@ p {
 .card {
   background-color:rgb(187, 183, 183);
   padding: 10px;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin: 10px;
   box-shadow: 0 5px 9px 0 rgba(0,0,0,0.5);
 }
 
@@ -66,7 +64,8 @@ button {
 .btn {
   border: none;
   outline: none;
-  padding: 12px 16px;
+  margin: 5px;
+  padding: 10px;
   background-color: rgb(187, 183, 183);
   cursor: pointer;
   font-weight: bold;
@@ -86,6 +85,7 @@ button {
 
 #myBtnContainer {
   align-self: center;
+  align-content: center;
 }
 
 
